fixed video flicker

--- a/_sass/_landing_page.scss
+++ b/_sass/_landing_page.scss
@@ -300,8 +300,9 @@ section.alternate {
   height: 0;
 
 	iframe {
+		background: #000;
 		position: absolute;
-		top: 0;
+		top: 20px;
 		left: 0;
 		width: 100%;
 		height: 100%;
